2001-07-29  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-export.c (gda_export_run, gda_export_stop): implemented the
	functions to run (asynchronously) the export process. When finished,
	the GdaExport will emit its "finished" signal

2001-07-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-export.c (gda_export_select_table_list): new function

2001-07-24  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-recordset.c (gda_recordset_move_prev): implemented

	* gda-export.c (gda_export_init): create the internal hash table
	here

2001-07-21  Rodrigo Moya <rodrigo@gnome-db.org>

	* *.h: s/#if defined(__cplusplus).../G_BEGIN_END_DECLS

2001-07-16  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-connection-pool.c: add a new parameter to the "error" signal
	to receive the list of errors from the connection

2001-07-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-connection.c (gda_connection_add_listener): new function
	(gda_connection_remove_listener): new function

	* gda-connection.c (gda_connection_new_from_dsn): use the user
	configured in the DSN if no user name is given in the call to this
	function

	(gda_connection_open): CORBA_Object_release the connection if the
	call is not successful

2001-07-05  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-error.[ch]: moved to libgda-common

	* gda-command.c (gda_command_destroy): properly destroy GtkObject's

2001-07-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-connection-pool.c (gda_connection_pool_open_connection): call
	gda_config_save_last_connection on every succesful connection

2001-07-03  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-connection.c (gda_connection_new_from_dsn): new self-contained
	function for creating a new connection from the information
	stored in the configuration for a given data source
	(gda_connection_open): changed input-only parameters to 'const gchar *'

2001-06-20  Ernst Molitor <ernst.molitor@uni-bonn.de>

	* gda-export.[ch]: rename variable 'export' to 'exp' to make
	GCC 3.0 and C++ compilers happy
