@@ -1,5 +1,13 @@
 2001-07-29  Rodrigo Moya <rodrigo@gnome-db.org>
 
+	* gda-export.c (gda_export_run): add a GdaExportFlags parameter for
+	clients to be able to specify several flags for the export process,
+	such as export table data or not
+	(run_export_cb): increment num_found to know how many objects were
+	treated in one pass, and if 0, finish the export process
+
+2001-07-29  Rodrigo Moya <rodrigo@gnome-db.org>
+
 	* gda-export.c (gda_export_run, gda_export_stop): implemented the
 	functions to run (asynchronously) the export process. When finished,
 	the GdaExport will emit its "finished" signal
